--- a/Alert/test-output/old/Suite/methods-alphabetical.html
+++ b/Alert/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b290e5">  <td>21/04/21 18:18:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AlertScript.driverClose()[pri:0, instance:com.alert.script.AlertScript@50de186c]">&lt;&lt;driverClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2027317551</td>   <td></td> </tr>
-<tr bgcolor="b290e5">  <td>21/04/21 18:18:32</td>   <td>-24898</td> <td title="&gt;&gt;AlertScript.driverSetUp()[pri:0, instance:com.alert.script.AlertScript@50de186c]">&gt;&gt;driverSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2027317551</td>   <td></td> </tr>
-<tr bgcolor="b290e5">  <td>21/04/21 18:18:51</td>   <td>-5699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.excelInitiation()[pri:0, instance:com.alert.script.AlertScript@50de186c]">excelInitiation</td> 
-  <td>main@2027317551</td>   <td></td> </tr>
-<tr bgcolor="b290e5">  <td>21/04/21 18:18:51</td>   <td>-5253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.find()[pri:0, instance:com.alert.script.AlertScript@50de186c]">find</td> 
-  <td>main@2027317551</td>   <td></td> </tr>
-<tr bgcolor="b290e5">  <td>21/04/21 18:18:51</td>   <td>-5257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.findGivenDataRow()[pri:0, instance:com.alert.script.AlertScript@50de186c]">findGivenDataRow</td> 
-  <td>main@2027317551</td>   <td></td> </tr>
-<tr bgcolor="b290e5">  <td>21/04/21 18:18:51</td>   <td>-5264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.findHeaderCell()[pri:0, instance:com.alert.script.AlertScript@50de186c]">findHeaderCell</td> 
-  <td>main@2027317551</td>   <td></td> </tr>
-<tr bgcolor="b290e5">  <td>21/04/21 18:18:32</td>   <td>-24889</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AlertScript.urlAndClassCall()[pri:0, instance:com.alert.script.AlertScript@50de186c]">&gt;&gt;urlAndClassCall</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2027317551</td>   <td></td> </tr>
+<tr bgcolor="b1f3ab">  <td>21/04/26 12:01:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AlertScript.driverClose()[pri:0, instance:com.alert.script.AlertScript@69f1a286]">&lt;&lt;driverClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2089589253</td>   <td></td> </tr>
+<tr bgcolor="b1f3ab">  <td>21/04/26 12:00:57</td>   <td>-41088</td> <td title="&gt;&gt;AlertScript.driverSetUp()[pri:0, instance:com.alert.script.AlertScript@69f1a286]">&gt;&gt;driverSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2089589253</td>   <td></td> </tr>
+<tr bgcolor="b1f3ab">  <td>21/04/26 12:01:31</td>   <td>-6639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.excelInitiation()[pri:0, instance:com.alert.script.AlertScript@69f1a286]">excelInitiation</td> 
+  <td>main@2089589253</td>   <td></td> </tr>
+<tr bgcolor="b1f3ab">  <td>21/04/26 12:01:33</td>   <td>-5363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.find()[pri:0, instance:com.alert.script.AlertScript@69f1a286]">find</td> 
+  <td>main@2089589253</td>   <td></td> </tr>
+<tr bgcolor="b1f3ab">  <td>21/04/26 12:01:33</td>   <td>-5370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.findGivenDataRow()[pri:0, instance:com.alert.script.AlertScript@69f1a286]">findGivenDataRow</td> 
+  <td>main@2089589253</td>   <td></td> </tr>
+<tr bgcolor="b1f3ab">  <td>21/04/26 12:01:33</td>   <td>-5400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertScript.findHeaderCell()[pri:0, instance:com.alert.script.AlertScript@69f1a286]">findHeaderCell</td> 
+  <td>main@2089589253</td>   <td></td> </tr>
+<tr bgcolor="b1f3ab">  <td>21/04/26 12:00:57</td>   <td>-41072</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AlertScript.urlAndClassCall()[pri:0, instance:com.alert.script.AlertScript@69f1a286]">&gt;&gt;urlAndClassCall</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2089589253</td>   <td></td> </tr>
 </table>
